; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_ag/extr_bta_ag_rfc.c_bta_ag_setup_port.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_ag/extr_bta_ag_rfc.c_bta_ag_setup_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@bta_ag_cb = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@BTA_AG_PASS_THROUGH = common dso_local global i64 0, align 8
@bta_ag_data_cback_tbl = common dso_local global i32* null, align 8
@BTA_AG_PORT_EV_MASK = common dso_local global i32 0, align 4
@bta_ag_port_cback_tbl = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bta_ag_setup_port(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i64 @bta_ag_scb_to_idx(i32* %6)
  %8 = sub i64 %7, 1
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bta_ag_cb, i32 0, i32 0), align 8
  %10 = load i64, i64* @BTA_AG_PASS_THROUGH, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %19

12:                                               ; preds = %2
  %13 = load i64, i64* %4, align 8
  %14 = load i32*, i32** @bta_ag_data_cback_tbl, align 8
  %15 = load i64, i64* %5, align 8
  %16 = getelementptr inbounds i32, i32* %14, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @PORT_SetDataCallback(i64 %13, i32 %17)
  br label %19

19:                                               ; preds = %12, %2
  %20 = load i64, i64* %4, align 8
  %21 = load i32, i32* @BTA_AG_PORT_EV_MASK, align 4
  %22 = call i32 @PORT_SetEventMask(i64 %20, i32 %21)
  %23 = load i64, i64* %4, align 8
  %24 = load i32*, i32** @bta_ag_port_cback_tbl, align 8
  %25 = load i64, i64* %5, align 8
  %26 = getelementptr inbounds i32, i32* %24, i64 %25
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @PORT_SetEventCallback(i64 %23, i32 %27)
  ret void
}

declare dso_local i64 @bta_ag_scb_to_idx(i32*) #1

declare dso_local i32 @PORT_SetDataCallback(i64, i32) #1

declare dso_local i32 @PORT_SetEventMask(i64, i32) #1

declare dso_local i32 @PORT_SetEventCallback(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
